# simplecpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  README.txt  README.txt~  configure.sh  configure.sh~  makes++  revisionHistory.txt  revisionHistory.txt~  revision_history.md  s++  tconfigure.sh  tconfigure.sh~
.github/workflows/: main.yml
examples/: .gitignore  5squares.h  Makefile  README.md  V3.h  airport.h  anarChakra.h  arrivals.txt  bintree.h  bounce.h  car.h  gravitation.h  hilbert.h  kaladarshan.cpp  line.cpp  opengl.cpp  petals.cpp  plane.h  plate.h  raagmalaa.cpp  realtree.cpp.1  realtree.h  rotatingSquares.old.cpp  sEm.txt  saraswati.h  star.h
ext/: .gitignore
include/: canvas.h  circle.h  common_def.h  composite.h  keycodes.h  line.h  opengl.hpp  polygon.h  pose.h  rectangle.h  sim.h  simplecpp  simplecpp~  sprite.h  spriteInterface.h  text.h  turtle.h  turtleSim.h
include/X11/: Xlib.h
include/glad/: glad.h
src/: Makefile  a.out  canvas.cpp  canvas.cpp~  canvas.h  canvas.h~  circle.cpp  common_def.h  composite.h  glad.c  globals.cpp  graphicsim.h  line.cpp  line.h  plane.cpp  polygon.cpp  polygon.h  pose.h  rectangle.cpp  sim.cpp  sim.h  sim.h~  simplecpp  simplecpp~  sprite.cpp  text.cpp  text.cpp~  text.h  text.h~  turtle.cpp  turtle.h  turtleSim.cpp  turtleSim.cpp~  turtleSim.h~
win/: basic_def.h  canvas.h  circle.h  common_def.h  composite.h  line.h  polygon.h  pose.h  rectangle.h  sim.h  simplecpp  sprite.h  spriteInterface.h  text.h  turtle.h
